# conductor

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
evaluation/: golden_dataset.json  offline_eval.py  run_eval.py
evaluation/datasets/: tool_use_v1.json
evaluation/harness/: dataset.py  metric.py  report.py  runner.py
evaluation/metrics/: __init__.py  arg_schema.py  no_tool_call.py  output_contains.py  output_contains_any.py  tool_call.py
frontend/: index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/e2e/: chat.spec.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: AppShell.test.tsx  AppShell.tsx  ApprovalCard.test.tsx  ApprovalCard.tsx  AssistantMessage.tsx  ChatInput.tsx  MemoryApprovalCard.tsx  MessageList.tsx  StatusBar.tsx  ThinkingBlock.tsx  ToolCallPill.tsx  ToolResultPill.tsx  UserMessage.tsx
frontend/src/hooks/: chatReducer.test.ts  useChatStream.ts
frontend/src/lib/: sseParser.ts
frontend/src/pages/: ChatPage.tsx
src/harness/adapters/llm/: azure_openai.py  fake.py  openai_compatible.py  openai_wire.py  parsers.py
src/harness/adapters/memory/: in_memory.py  pgvector_store.py  qdrant_store.py  sqlite_store.py
src/harness/adapters/tools/: calculator.py  recall.py  remember.py
src/harness/api/: Dockerfile  main.py  schemas.py
src/harness/config/: settings.py
src/harness/core/: types.py
src/harness/observability/: run_store.py  token_accumulator.py  tracer.py
src/harness/orchestration/: build.py  checkpointer.py
src/harness/security/: content_filter.py  input_guard.py  output_filter.py
tests/contract/: test_llm_client.py  test_long_term_memory.py  test_tool_call_parser.py
tests/integration/: conftest.py  test_eval_runner.py  test_sse_endpoint.py
tests/unit/: test_agent_event.py  test_agent_registry.py  test_build_llm.py  test_checkpointer.py  test_default_graph.py  test_eval_dataset.py  test_eval_metrics.py  test_eval_report.py  test_fake_llm.py  test_openai_compatible_client.py  test_openai_wire.py  test_react_loop.py  test_run_store.py  test_settings.py  test_streaming_tracer.py  test_token_accumulator.py  test_tool_protocol.py
(+10 files in other folders)
