[project]
name = "agent-harness"
version = "0.1.0"
description = "Production AI agent harness with swappable model/memory backends"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
]

[project.optional-dependencies]
azure = ["openai>=1.54", "azure-identity>=1.19"]
qdrant = ["qdrant-client>=1.12"]
local = ["openai>=1.54"]  # llama-server / vLLM / any OpenAI-compatible server
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "ruff>=0.7", "mypy>=1.13"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 90
src = ["src"]

[tool.mypy]
mypy_path = "src"
packages = ["harness"]
strict = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/harness"]
