[project]
name = "agent-harness"
version = "0.1.0"
description = "Production AI agent harness with swappable model/memory backends"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "openai[local]",
    "langgraph>=1.2.2",
    "langgraph-checkpoint-sqlite>=3.1.0",
]

[project.optional-dependencies]
azure = ["openai>=1.54", "azure-identity>=1.19"]
pgvector = ["pgvector>=0.3", "psycopg[binary]>=3.2"]
local = ["openai>=1.54"]  # llama-server / vLLM / any OpenAI-compatible server
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "ruff>=0.7", "mypy>=1.13"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 90
src = ["src"]

[tool.mypy]
mypy_path = "src"
packages = ["harness"]
# Relaxed for now: the existing scaffold carries pre-existing type debt
# (bare generics, an untyped eval helper, optional deps without stubs).
# Tighten back toward strict in a dedicated cleanup pass later.
check_untyped_defs = true
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/harness"]
